# project-baseConfig

./: CMakeLists.txt  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/src/: main.cpp
src/: main.cpp
